crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__recovery__assignment_invalid_targets.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
fun invalidAssignmentTargets(value: Int) {
    1 = value
    value + 1 = value
    value() = 3
}

syntax:
syntax:
KotlinFile
  AnnotationList
  KotlinFileItemList
    FunctionDeclaration
      ModifierList
      ModifierList
      FunKw "fun" @ 0..3 trailing=[Whitespace " "]
      ModifierList
      Name
        Identifier "invalidAssignmentTargets" @ 4..28
      ValueParameterList
        LParen "(" @ 28..29
        ValueParameterSeparatedList
          ValueParameter
            ModifierList
            Name
              Identifier "value" @ 29..34
            Colon ":" @ 34..35 trailing=[Whitespace " "]
            TypeReference
              UserType
                UserTypeSegmentList
                  UserTypeSegment
                    AnnotationList
                    Name
                      Identifier "Int" @ 36..39
        RParen ")" @ 39..40 trailing=[Whitespace " "]
      BlockBody
        Block
          LBrace "{" @ 41..42
          BlockItemList
            Statement
              ExpressionStatement
                AssignmentExpression
                  BogusExpression
                    LiteralExpression
                      IntegerLiteral "1" @ 47..48 leading=[Newline "\n", Whitespace "    "] trailing=[Whitespace " "]
                  Assign "=" @ 49..50 trailing=[Whitespace " "]
                  NameExpression
                    Identifier "value" @ 51..56
              TerminatorList
            Statement
              ExpressionStatement
                AssignmentExpression
                  BogusExpression
                    BinaryExpression
                      NameExpression
                        Identifier "value" @ 61..66 leading=[Newline "\n", Whitespace "    "] trailing=[Whitespace " "]
                      BinaryOperator
                        Plus "+" @ 67..68 trailing=[Whitespace " "]
                      BinaryExpressionRight
                        LiteralExpression
                          IntegerLiteral "1" @ 69..70 trailing=[Whitespace " "]
                  Assign "=" @ 71..72 trailing=[Whitespace " "]
                  NameExpression
                    Identifier "value" @ 73..78
              TerminatorList
            Statement
              ExpressionStatement
                AssignmentExpression
                  BogusExpression
                    CallExpression
                      NameExpression
                        Identifier "value" @ 83..88 leading=[Newline "\n", Whitespace "    "]
                      TypeArgumentListList
                      ValueArgumentList
                        LParen "(" @ 88..89
                        ValueArgumentEntryList
                        RParen ")" @ 89..90 trailing=[Whitespace " "]
                      LambdaExpressionList
                  Assign "=" @ 91..92 trailing=[Whitespace " "]
                  LiteralExpression
                    IntegerLiteral "3" @ 93..94
              TerminatorList
          RBrace "}" @ 95..96 leading=[Newline "\n"]
  Eof "" @ 97..97 leading=[Newline "\n"]

diagnostics:
  code=kotlin.parse.invalid_assignment_target severity=Error stage=Parser range=49..50 message="invalid assignment target"
  code=kotlin.parse.invalid_assignment_target severity=Error stage=Parser range=71..72 message="invalid assignment target"
  code=kotlin.parse.invalid_assignment_target severity=Error stage=Parser range=91..92 message="invalid assignment target"

diagnostics:
code=kotlin.parse.invalid_assignment_target severity=Error stage=Parser range=Some(TextRange { start: TextSize(49), end: TextSize(50) }) message=invalid assignment target
code=kotlin.parse.invalid_assignment_target severity=Error stage=Parser range=Some(TextRange { start: TextSize(71), end: TextSize(72) }) message=invalid assignment target
code=kotlin.parse.invalid_assignment_target severity=Error stage=Parser range=Some(TextRange { start: TextSize(91), end: TextSize(92) }) message=invalid assignment target
