crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__recovery__braced_opening_comments.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
class BracedOpeningComments { /* JOLT-TRIVIA:class-open */
    fun block() { /* JOLT-TRIVIA:block-open */
        println("body")
    }
}

syntax:
syntax:
KotlinFile
  AnnotationList
  KotlinFileItemList
    ClassDeclaration
      ModifierList
      ModifierList
      ClassKw "class" @ 0..5 trailing=[Whitespace " "]
      Name
        Identifier "BracedOpeningComments" @ 6..27 trailing=[Whitespace " "]
      ClassBody
        LBrace "{" @ 28..29 trailing=[Whitespace " ", BlockComment "/* JOLT-TRIVIA:class-open */"]
        ClassMemberList
          ClassMemberDeclaration
            FunctionDeclaration
              ModifierList
              ModifierList
              FunKw "fun" @ 63..66 leading=[Newline "\n", Whitespace "    "] trailing=[Whitespace " "]
              ModifierList
              Name
                Identifier "block" @ 67..72
              ValueParameterList
                LParen "(" @ 72..73
                ValueParameterSeparatedList
                RParen ")" @ 73..74 trailing=[Whitespace " "]
              BlockBody
                Block
                  LBrace "{" @ 75..76 trailing=[Whitespace " ", BlockComment "/* JOLT-TRIVIA:block-open */"]
                  BlockItemList
                    Statement
                      ExpressionStatement
                        CallExpression
                          NameExpression
                            Identifier "println" @ 114..121 leading=[Newline "\n", Whitespace "        "]
                          TypeArgumentListList
                          ValueArgumentList
                            LParen "(" @ 121..122
                            ValueArgumentEntryList
                              ValueArgument
                                ValueArgumentPrefixList
                                StringTemplateExpression
                                  StringTemplateEntryList
                                    StringTemplateEntry
                                      OpenQuote "\"" @ 122..123
                                    StringTemplateEntry
                                      RegularStringPart "body" @ 123..127
                                  ClosingQuote "\"" @ 127..128
                            RParen ")" @ 128..129
                          LambdaExpressionList
                      TerminatorList
                  RBrace "}" @ 134..135 leading=[Newline "\n", Whitespace "    "]
        RBrace "}" @ 136..137 leading=[Newline "\n"]
  Eof "" @ 138..138 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
