crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__recovery__callable_reference_missing_target.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
fun callableReferenceMissingTarget() {
    val reference = ::<String>
}

syntax:
syntax:
KotlinFile
  AnnotationList
  KotlinFileItemList
    FunctionDeclaration
      ModifierList
      ModifierList
      FunKw "fun" @ 0..3 trailing=[Whitespace " "]
      ModifierList
      CallableName
        CallableNamePartList
          Name
            Identifier "callableReferenceMissingTarget" @ 4..34
      ValueParameterList
        LParen "(" @ 34..35
        ValueParameterSeparatedList
        RParen ")" @ 35..36 trailing=[Whitespace " "]
      Block
        LBrace "{" @ 37..38
        BlockItemList
          PropertyDeclaration
            ModifierList
            ModifierList
            ValKw "val" @ 43..46 leading=[Newline "\n", Whitespace "    "] trailing=[Whitespace " "]
            CallableName
              CallableNamePartList
                Name
                  Identifier "reference" @ 47..56 trailing=[Whitespace " "]
            Assign "=" @ 57..58 trailing=[Whitespace " "]
            CallableReferenceExpression
              ColonColon "::" @ 59..61
              TypeArgumentList
                Lt "<" @ 61..62
                TypeProjectionSeparatedList
                  TypeReference
                    UserType
                      UserTypeSegmentList
                        UserTypeSegment
                          AnnotationList
                          Name
                            Identifier "String" @ 62..68
                Gt ">" @ 68..69
              TypeArgumentListList
            PropertyBodyMemberList
        RBrace "}" @ 70..71 leading=[Newline "\n"]
  Eof "" @ 72..72 leading=[Newline "\n"]

diagnostics:
  code=kotlin.parse.expected_syntax severity=Error stage=Parser range=70..71 message="expected callable reference name"

diagnostics:
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(70), end: TextSize(71) }) message=expected callable reference name
