crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__recovery__class_body.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
class Demo { fun ok() {}
/* orphan */ +
val value = 1 }

syntax:
syntax:
KotlinFile
  AnnotationList
  KotlinFileItemList
    ClassDeclaration
      ModifierList
      ModifierList
      ClassKw "class" @ 0..5 trailing=[Whitespace " "]
      Name
        Identifier "Demo" @ 6..10 trailing=[Whitespace " "]
      ClassBody
        LBrace "{" @ 11..12 trailing=[Whitespace " "]
        ClassMemberList
          ClassMemberDeclaration
            FunctionDeclaration
              ModifierList
              ModifierList
              FunKw "fun" @ 13..16 trailing=[Whitespace " "]
              ModifierList
              Name
                Identifier "ok" @ 17..19
              ValueParameterList
                LParen "(" @ 19..20
                ValueParameterSeparatedList
                RParen ")" @ 20..21 trailing=[Whitespace " "]
              BlockBody
                Block
                  LBrace "{" @ 22..23
                  BlockItemList
                  RBrace "}" @ 23..24
          ClassMemberDeclaration
            Statement
              ExpressionStatement
                UnaryExpression
                  Plus "+" @ 38..39 leading=[Newline "\n", BlockComment "/* orphan */", Whitespace " "]
                  ErrorNode
                    ValKw "val" @ 40..43 leading=[Newline "\n"] trailing=[Whitespace " "]
                ErrorNode
                  Identifier "value" @ 44..49 trailing=[Whitespace " "]
                ErrorNode
                  Assign "=" @ 50..51 trailing=[Whitespace " "]
                ErrorNode
                  IntegerLiteral "1" @ 52..53 trailing=[Whitespace " "]
              TerminatorList
        RBrace "}" @ 54..55
  Eof "" @ 56..56 leading=[Newline "\n"]

diagnostics:
  code=kotlin.parse.expected_syntax severity=Error stage=Parser range=40..43 message="expected expression"
  code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=44..49 message="unexpected token in expression"
  code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=50..51 message="unexpected token in expression"
  code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=52..53 message="unexpected token in expression"

diagnostics:
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(40), end: TextSize(43) }) message=expected expression
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(44), end: TextSize(49) }) message=unexpected token in expression
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(50), end: TextSize(51) }) message=unexpected token in expression
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(52), end: TextSize(53) }) message=unexpected token in expression
